Started doing auth documentation
